--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,17 @@
+body{
+  margin:0;
+}
+
+body,html{height:100%;}
+
+#root{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 50%;
+}
+
 .workoutCard{
   display: flex;
   height: 25%;
@@ -10,7 +24,6 @@
   border-radius: 6px;
   box-shadow: 2px 2px 2px rgb(208, 208, 208);
   overflow: auto;
-
 }
 
 #cardContainer{
@@ -27,3 +40,89 @@
   display: flex;
   flex-direction: row;
 }
+
+#header{
+  font-family: "Staatliches";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: #AAFCB8;
+  margin: 0;
+  position: absolute;
+  top: 0;
+}
+
+#login{
+  margin-top: 120px;
+  width: 180px;
+  height: 240px;
+}
+
+#loginForm{
+  font-family: 'Staatliches';
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  border-radius: 4px;
+  width: 100%;
+  height: 100%;
+}
+
+#loginHeader{
+  display: flex;
+  background-color: #45B69C;
+  align-items: center;
+  position: relative;
+  justify-content: center;
+  font-family: "Staatliches";
+  top: 0px;
+  width: 100%;
+  height: 20%;
+}
+
+p{
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+input{
+  margin: 0.5em;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.buttons{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+button{
+  border-style: none;
+  padding: 8px;
+  font-family: "Staatliches";
+  border-radius: 4px;
+  background-color: #7293A0;
+}
+
+#footer{
+  display: flex;
+  background-color: #AAFCB8;
+  position: absolute;
+  bottom: 0;
+  align-items: center;
+  justify-content: center;
+  font-family: "Staatliches";
+  width: 100%;
+  height: 80px;
+}
+
+/* Login/Signup Styling */
+
