--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -15,7 +15,7 @@ body,html{height:100%;}
 .workoutCard{
   display: flex;
   height: 25%;
-  width: 20%;
+  width:100%;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
@@ -57,6 +57,20 @@ body,html{height:100%;}
   margin-top: 120px;
   width: 180px;
   height: 240px;
+}
+
+#homePage{
+  min-width: 30%;
+  min-height: 50%;
+  /* overflow: auto; */
+  overflow-y: auto;
+  position: absolute;
+  top: 150px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-height: 70%;
 }
 
 #loginForm{
